add: banner section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Mr. A</title>
+    <link rel="icon" href="./images/mr.a.png" type="png/icon" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,57 +15,135 @@
   <body>
     <!-- Header Section -->
     <header class="bg-dark">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
-      <a class="navbar-brand d-flex align-items-center" href="#home">
-        <img src="./images/mr.a.png" 
-             alt="Logo" 
-             class="img-fluid rounded" 
-             style="width: 90px; height: 75px; object-fit: cover;">
-      </a>
-      <button class="navbar-toggler" 
-              type="button" 
-              data-bs-toggle="collapse" 
-              data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fw-semibold">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <a class="navbar-brand d-flex align-items-center" href="#home">
+            <img
+              src="./images/mr.a.png"
+              alt="Logo"
+              class="img-fluid rounded"
+              style="width: 90px; height: 75px; object-fit: cover"
+            />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fw-semibold">
+              <li class="nav-item">
+                <a class="nav-link active" href="#home">Home</a>
+              </li>
 
-          <li class="nav-item">
-            <a class="nav-link active" href="#home">Home</a>
-          </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#portfolio">Portfolio</a>
+              </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="#portfolio">Portfolio</a>
-          </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#skills">Skills</a>
+              </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="#skills">Skills</a>
-          </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#contact">Contact</a>
+              </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="#contact">Contact</a>
-          </li>
+              <li class="nav-item ms-lg-3">
+                <a
+                  href="https://drive.google.com/uc?export=download&id=1BYpeudA4GF9WEXvdgJ9st6tm1J2K00Gq"
+                  class="btn btn-outline-light"
+                >
+                  Resume <i class="fa-solid fa-download ms-1"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <!-- Banner Section -->
+      <section class="py-5" style="background-color: #2e2f2b">
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-lg-6 col-md-12 text-white mb-4">
+              <h1 class="fw-bold display-4">
+                Hey there, I'm <span class="text-warning">Mr. A</span>
+              </h1>
+              <p class="fs-5">Competitive Programmer · Software Developer · Problem Solver</p>
 
-          <li class="nav-item ms-lg-3">
-            <a href="./resume.pdf" class="btn btn-outline-light">
-              Resume <i class="fa-solid fa-download ms-1"></i>
-            </a>
-          </li>
-
-        </ul>
-      </div>
-
-    </div>
-  </nav>
-</header>
-
+              <p class="mb-4">
+                I'm a Competitive Programmer with a strong passion for software development. Skilled
+                in <b>DSA, OOP, DBMS</b>, and modern Web Technologies.
+              </p>
+              <div class="d-flex flex-wrap gap-2">
+                <a
+                  href="https://github.com/arnabsahawrk"
+                  target="_blank"
+                  class="btn btn-outline-light"
+                >
+                  <i class="fa-brands fa-github me-1"></i> GitHub
+                </a>
+                <a
+                  href="https://leetcode.com/u/arnabsahawrk/"
+                  target="_blank"
+                  class="btn btn-outline-warning"
+                >
+                  <i class="fa-solid fa-code me-1"></i> LeetCode
+                </a>
+                <a
+                  href="https://codeforces.com/profile/arnabsahawrk"
+                  target="_blank"
+                  class="btn btn-outline-info"
+                >
+                  <i class="fa-solid fa-ranking-star me-1"></i> CodeForces
+                </a>
+                <a
+                  href="https://www.codechef.com/users/arnabsahawrk"
+                  target="_blank"
+                  class="btn btn-outline-secondary"
+                >
+                  <i class="fa-solid fa-utensils me-1"></i> CodeChef
+                </a>
+                <a
+                  href="https://www.hackerrank.com/profile/arnabsahawrk"
+                  target="_blank"
+                  class="btn btn-outline-success"
+                >
+                  <i class="fa-brands fa-hackerrank me-1"></i> HackerRank
+                </a>
+                <a href="https://x.com/arnabsahawrk" target="_blank" class="btn btn-outline-light">
+                  <i class="fa-brands fa-x-twitter me-1"></i> Twitter
+                </a>
+                <a
+                  href="https://www.facebook.com/arnabsahawrk"
+                  target="_blank"
+                  class="btn btn-outline-primary"
+                >
+                  <i class="fa-brands fa-facebook me-1"></i> Facebook
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-6 col-md-12 text-center">
+              <img
+                src="./images/person.png"
+                alt="Person"
+                class="img-fluid"
+                style="max-width: 400px"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+    </header>
 
     <!-- Main Section  -->
     <main class="bg-dark"></main>
     <!-- Footer Section  -->
     <footer class="bg-dark"></footer>
+
+    <script src="https://kit.fontawesome.com/7959247147.js" crossorigin="anonymous"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
