add: portfolio and skills sections

--- a/index.html
+++ b/index.html
@@ -138,8 +138,262 @@
       </section>
     </header>
 
-    <!-- Main Section  -->
-    <main class="bg-dark"></main>
+    <!-- Main Section -->
+    <main class="bg-dark text-white py-5">
+      <!-- Portfolio Section -->
+      <section id="portfolio" class="container mb-5">
+        <h1 class="text-center mb-4 fw-bold">Portfolio</h1>
+        <div class="card bg-secondary text-white mb-5 shadow-lg border-0">
+          <div class="row g-0">
+            <div class="col-lg-6">
+              <div
+                id="portfolio1Carousel"
+                class="carousel slide h-100"
+                data-bs-ride="carousel"
+                data-bs-interval="3500"
+              >
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img
+                      src="./images/dine-portal-1.png"
+                      style="height: 350px; object-fit: cover"
+                      class="d-block w-100"
+                      alt=""
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="./images/dine-portal-2.png"
+                      style="height: 350px; object-fit: cover"
+                      class="d-block w-100"
+                      alt=""
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="./images/dine-portal-3.png"
+                      style="height: 350px; object-fit: cover"
+                      class="d-block w-100"
+                      alt=""
+                    />
+                  </div>
+                </div>
+                <button
+                  class="carousel-control-prev"
+                  type="button"
+                  data-bs-target="#portfolio1Carousel"
+                  data-bs-slide="prev"
+                >
+                  <span class="carousel-control-prev-icon"></span>
+                </button>
+                <button
+                  class="carousel-control-next"
+                  type="button"
+                  data-bs-target="#portfolio1Carousel"
+                  data-bs-slide="next"
+                >
+                  <span class="carousel-control-next-icon"></span>
+                </button>
+              </div>
+            </div>
+            <div class="col-lg-6 p-4 d-flex flex-column">
+              <h3 class="fw-bold">Dine Portal</h3>
+
+              <div class="mb-2">
+                <a
+                  href="https://github.com/arnabsahawrk/dine-portal"
+                  target="_blank"
+                  class="btn btn-outline-light btn-sm me-2"
+                >
+                  <i class="fa-brands fa-github"></i> GitHub
+                </a>
+                <a
+                  href="https://arnabsahawrk-dine-portal.web.app"
+                  target="_blank"
+                  class="btn btn-warning btn-sm"
+                >
+                  Live Demo
+                </a>
+              </div>
+
+              <p class="text-white-50">
+                Dine Portal is a comprehensive restaurant management website built with the MERN
+                stack. It allows customers to explore food items, place orders, and enables
+                efficient restaurant operations.
+              </p>
+
+              <div class="mt-auto">
+                <h6>Tech Stack</h6>
+                <div class="d-flex flex-wrap gap-2">
+                  <span class="badge bg-dark">React</span>
+                  <span class="badge bg-dark">Node.js</span>
+                  <span class="badge bg-dark">Express.js</span>
+                  <span class="badge bg-dark">MongoDB</span>
+                  <span class="badge bg-dark">Firebase</span>
+                  <span class="badge bg-dark">TanStack Query</span>
+                  <span class="badge bg-dark">Axios</span>
+                  <span class="badge bg-dark">React Hook Form</span>
+                  <span class="badge bg-dark">JWT</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card bg-secondary text-white mb-5 shadow-lg border-0">
+          <div class="row g-0">
+            <div class="col-lg-6">
+              <div
+                id="portfolio2Carousel"
+                class="carousel slide h-100"
+                data-bs-ride="carousel"
+                data-bs-interval="4000"
+              >
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img
+                      src="./images/workSync-1.png"
+                      style="height: 350px; object-fit: cover"
+                      class="d-block w-100"
+                      alt=""
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="./images/workSync-2.png"
+                      style="height: 350px; object-fit: cover"
+                      class="d-block w-100"
+                      alt=""
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="./images/workSync-3.png"
+                      style="height: 350px; object-fit: cover"
+                      class="d-block w-100"
+                      alt=""
+                    />
+                  </div>
+                </div>
+                <button
+                  class="carousel-control-prev"
+                  type="button"
+                  data-bs-target="#portfolio2Carousel"
+                  data-bs-slide="prev"
+                >
+                  <span class="carousel-control-prev-icon"></span>
+                </button>
+                <button
+                  class="carousel-control-next"
+                  type="button"
+                  data-bs-target="#portfolio2Carousel"
+                  data-bs-slide="next"
+                >
+                  <span class="carousel-control-next-icon"></span>
+                </button>
+              </div>
+            </div>
+            <div class="col-lg-6 p-4 d-flex flex-column">
+              <h3 class="fw-bold">WorkSync</h3>
+
+              <div class="mb-2">
+                <a
+                  href="https://github.com/arnabsahawrk/WorkSync-Client"
+                  target="_blank"
+                  class="btn btn-outline-light btn-sm me-2"
+                >
+                  <i class="fa-brands fa-github"></i> GitHub
+                </a>
+                <a
+                  href="https://arnabsahawrk-work-sync.web.app"
+                  target="_blank"
+                  class="btn btn-warning btn-sm"
+                >
+                  Live Demo
+                </a>
+              </div>
+
+              <p class="text-white-50">
+                WorkSync is an Employee Management platform that streamlines workforce tracking,
+                performance management, payroll, and HR operations.
+              </p>
+
+              <div class="mt-auto">
+                <h6>Tech Stack</h6>
+                <div class="d-flex flex-wrap gap-2">
+                  <span class="badge bg-dark">React</span>
+                  <span class="badge bg-dark">React Router</span>
+                  <span class="badge bg-dark">Firebase</span>
+                  <span class="badge bg-dark">MongoDB</span>
+                  <span class="badge bg-dark">Node.js</span>
+                  <span class="badge bg-dark">Express.js</span>
+                  <span class="badge bg-dark">Stripe</span>
+                  <span class="badge bg-dark">Tailwind CSS</span>
+                  <span class="badge bg-dark">JWT</span>
+                  <span class="badge bg-dark">Recharts</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Skills Section -->
+      <section id="skills" class="container py-4">
+        <h1 class="text-center mb-4 fw-bold">Skills</h1>
+
+        <div class="row g-4">
+          <div class="col-lg-8">
+            <div class="mb-5">
+              <h4 class="fw-bold text-warning">CSE Fundamentals</h4>
+              <div class="d-flex flex-wrap gap-2 mb-3">
+                <span class="badge bg-info">DSA</span>
+                <span class="badge bg-info">OOP</span>
+                <span class="badge bg-info">DBMS</span>
+                <span class="badge bg-info">Operating System</span>
+                <span class="badge bg-info">Computer Networks</span>
+              </div>
+
+              <h4 class="fw-bold text-warning">Frontend</h4>
+              <div class="d-flex flex-wrap gap-2 mb-3">
+                <span class="badge bg-primary">HTML</span>
+                <span class="badge bg-primary">CSS</span>
+                <span class="badge bg-primary">Bootstrap</span>
+                <span class="badge bg-primary">Tailwind</span>
+                <span class="badge bg-primary">React</span>
+                <span class="badge bg-primary">Redux</span>
+              </div>
+
+              <h4 class="fw-bold text-warning">Backend</h4>
+              <div class="d-flex flex-wrap gap-2 mb-3">
+                <span class="badge bg-success">Django</span>
+                <span class="badge bg-success">DRF</span>
+                <span class="badge bg-success">MySQL</span>
+                <span class="badge bg-success">PostgreSQL</span>
+                <span class="badge bg-success">Node.js</span>
+                <span class="badge bg-success">Express.js</span>
+                <span class="badge bg-success">MongoDB</span>
+              </div>
+
+              <h4 class="fw-bold text-warning">Languages</h4>
+              <div class="d-flex flex-wrap gap-2">
+                <span class="badge bg-dark">C</span>
+                <span class="badge bg-dark">C++</span>
+                <span class="badge bg-dark">Python</span>
+                <span class="badge bg-dark">JavaScript</span>
+                <span class="badge bg-dark">TypeScript</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <h2 class="fw-bold text-warning">Education</h2>
+            <p class="mb-0">Bachelor in Computer Science & Engineering</p>
+            <p class="mb-0">University of South Asia, Dhaka</p>
+            <span class="text-secondary fw-bold">Graduation Year: 2025</span>
+          </div>
+        </div>
+      </section>
+    </main>
+
     <!-- Footer Section  -->
     <footer class="bg-dark"></footer>
 
