add: contact and footer sections

--- a/index.html
+++ b/index.html
@@ -392,10 +392,89 @@
           </div>
         </div>
       </section>
-    </main>
+      <!-- Contact Section -->
+      <section id="contact" class="bg-dark text-white">
+        <div class="container">
+          <div class="text-center mb-5">
+            <h1 class="fw-bold text-white">Contact</h1>
+          </div>
+          <div class="row justify-content-center">
+            <div class="col-lg-5 mb-5">
+              <form class="p-4 bg-secondary rounded" style="background-color: #1a1a1a !important">
+                <div class="mb-3">
+                  <label class="form-label text-white-50">Your Name</label>
+                  <input
+                    type="text"
+                    class="form-control bg-dark text-white border-secondary"
+                    placeholder="Enter your name"
+                  />
+                </div>
 
-    <!-- Footer Section  -->
-    <footer class="bg-dark"></footer>
+                <div class="mb-3">
+                  <label class="form-label text-white-50">Your Email</label>
+                  <input
+                    type="email"
+                    class="form-control bg-dark text-white border-secondary"
+                    placeholder="Enter your email"
+                  />
+                </div>
+
+                <div class="mb-3">
+                  <label class="form-label text-white-50">Message</label>
+                  <textarea
+                    class="form-control bg-dark text-white border-secondary"
+                    rows="5"
+                    placeholder="Write your message"
+                  ></textarea>
+                </div>
+
+                <button type="submit" class="btn btn-outline-light px-4">Send Message</button>
+              </form>
+            </div>
+            <div class="col-lg-5">
+              <div class="mb-4">
+                <h4 class="fw-bold text-white">Email</h4>
+                <p class="text-white-50 mb-1">
+                  arnabsahawrk@gmail.com <span class="text-white-50">(Recommended)</span>
+                </p>
+              </div>
+
+              <div class="mb-4">
+                <h4 class="fw-bold text-white">WhatsApp</h4>
+                <p class="text-white-50 mb-1">
+                  +8801517824769 <span class="text-white-50">(Always Available)</span>
+                </p>
+              </div>
+
+              <div class="mb-4">
+                <h4 class="fw-bold text-white">Social</h4>
+                <p class="text-white-50 mb-1">
+                  Facebook / Twitter → @arnabsahawrk
+                  <span class="text-white-50">(Slow response)</span>
+                </p>
+              </div>
+
+              <div class="mb-4">
+                <h4 class="fw-bold text-white">Address</h4>
+                <p class="text-white-50 mb-1">Dhaka, Bangladesh</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <!-- Footer Section -->
+    <footer class="bg-dark text-light pt-5 pb-3">
+      <div class="container text-center">
+        <hr class="border-secondary mb-4" />
+        <p class="mb-1 fw-semibold">Copyright © 2025 | Arnab Saha</p>
+        <div class="d-flex justify-content-center gap-3 mt-3">
+          <button class="btn btn-outline-light btn-sm px-3" disabled>ধন্যবাদ</button>
+          <button class="btn btn-outline-light btn-sm px-3" disabled>THANKS</button>
+          <button class="btn btn-outline-light btn-sm px-3" disabled>धन्यवाद</button>
+        </div>
+      </div>
+    </footer>
 
     <script src="https://kit.fontawesome.com/7959247147.js" crossorigin="anonymous"></script>
     <script
